# Homebro

./: .gitignore  CMakeLists.txt  conanfile.py  docker-compose.yml
config/: kafka.json  kafkaProducers.json  kafkaTopics.json  mosquitto.json
include/: kafkaProtocolsControl.h
src/: kafkaConnection.cpp  main.cpp
